# kde-input-method

./: CMakeLists.txt  README
helper/: CMakeLists.txt  gtkimmoduledetector.sh  imenvloader.cpp  qtimmoduledetector.cpp  setimenv.sh
inputmethod/: CMakeLists.txt  fcitx.desktop
kcontrol/: CMakeLists.txt  imchooser.desktop  imchooser.ui  immodel.cpp  immodel.h  kcm_imchooser.cpp  kcm_imchooser.h
kded/: CMakeLists.txt  imlauncher.cpp  imlauncher.desktop  imlauncher.h
